added social links

--- a/index.html
+++ b/index.html
@@ -1006,13 +1006,13 @@
         <p>Generative AI Expert | Data Scientist | Electrical Engineer</p>
         
         <div class="social-links">
-          <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://github.com/TechAsad" class="social-link"><i class="fab fa-github"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://www.linkedin.com/in/asad18/" class="social-link" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/TechAsad" class="social-link" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+          <a href="#" class="social-link" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+          <a href="https://wa.link/ag35kg" class="social-link" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
         </div>
         
-        <p>&copy; 2024 Muhammad Asadullah. All Rights Reserved.</p>
+        <p>&copy; 2025 Muhammad Asadullah. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
