--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Muhammad Asadullah | Generative AI Expert</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
   <style>
     :root {
       --primary: #2b2d42;
