added social links 2

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
           
           <div class="personal-info">
             <div class="info-item">
-              <p><strong>Email:</strong> asadigbal1247@gmail.com</p>
+              <p><strong>Email:</strong> asadiqbal1247@gmail.com</p>
               <p><strong>Phone:</strong> +92-320-4109120</p>
               <p><strong>Location:</strong> Lahore, Pakistan</p>
             </div>
@@ -935,7 +935,7 @@
             </div>
             <div class="contact-details">
               <h4>Email</h4>
-              <p>asadigbal1247@gmail.com</p>
+              <p>asadiqbal1247@gmail.com</p>
             </div>
           </div>
           
