chat/voice agent mobile friendly

--- a/index.html
+++ b/index.html
@@ -879,13 +879,13 @@
           
           <div class="personal-info">
             <div class="info-item">
-              <p><i class="fas fa-envelope"></i> <strong>Email:</strong> asadiqbal1247@gmail.com</p>
-              <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +92-320-4109120</p>
+              <p><i class="fas fa-envelope"></i> <strong>Email: </strong> asadiqbal1247@gmail.com</p>
+              <p><i class="fas fa-phone"></i> <strong>Phone: </strong> +92-320-4109120</p>
               <p><i class="fas fa-map-marker-alt"></i> <strong>Location:</strong> Lahore, Pakistan</p>
             </div>
             <div class="info-item">
-              <p><i class="fas fa-globe"></i> <strong>Nationality:</strong> Pakistani</p>
-              <p><i class="fas fa-language"></i> <strong>Languages:</strong> Urdu (Native), English (Fluent), Hindi, Punjabi</p>
+              <p><i class="fas fa-globe"></i> <strong>Nationality: </strong> Pakistani</p>
+              <p><i class="fas fa-language"></i> <strong>Languages: </strong> Urdu (Native), English (Fluent), Hindi, Punjabi</p>
             </div>
           </div>
         </div>
@@ -935,8 +935,8 @@
           
           <div class="skill-item">
             <div class="skill-info">
-              <span>No-Code/Low-Code Automation</span>
-              <span>80%</span>
+              <span>No-Code/Low-Code Automation tools (n8n)</span>
+              <span>85%</span>
             </div>
             <div class="skill-bar">
               <div class="skill-progress" style="width: 80%"></div>
