chat/voice agent mobile responsive

--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@
   <div class="widget-container">
     <div class="widget-content" id="voiceWidgetContainer">
       <div class="widget-header">
-        <h4>Speak With My Assistant</h4>
+        <h4>Talk With My Assistant</h4>
         <button class="close-widget" id="closeVoiceWidget"><i class="fas fa-times"></i></button>
       </div>
       <vapi-widget
@@ -1273,7 +1273,7 @@
         border-radius="small"
         size="compact"
         position="bottom-right"
-        title="Speak With My Assistant"
+        title="Chat/Speak"
         start-button-text="Start"
         end-button-text="End Call"
         chat-first-message="Hey, How can I help you today?"
@@ -1324,7 +1324,7 @@
         }
 
         const formData = { name, email, subject, message };
-        fetch('https://n8n1.infinitly.com/webhook/store-conversation', {
+        fetch('https://n8n1.infinitly.com:5678/webhook/contact-form', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
