--- a/index.html
+++ b/index.html
@@ -1291,6 +1291,9 @@
       <i class="fas fa-microphone"></i>
     </button>
 
+    <telnyx-ai-agent agent-id="assistant-82d5f81f-93e4-4e91-8e78-d229037a760e"></telnyx-ai-agent>
+
+
   </div>
   </footer>
 
@@ -1420,6 +1423,7 @@
       }
     });
   </script>
+  <script async="" src="https://unpkg.com/@telnyx/ai-agent-widget"></script>
   
   <!-- Vapi Widget Embed -->
   <script src="https://unpkg.com/@vapi-ai/client-sdk-react/dist/embed/widget.umd.js" async type="text/javascript"></script>
