--- a/index.html
+++ b/index.html
@@ -1526,7 +1526,7 @@
         border-radius="small"
         size="compact"
         position="bottom-right"
-        title="Chat with AI Assistant"
+        title="Assistant"
         start-button-text="Start"
         end-button-text="End Call"
         chat-first-message="Hey, How can I help you today?"
