chat/voice agent mobile responsive

--- a/index.html
+++ b/index.html
@@ -1523,7 +1523,7 @@
         border-radius="small"
         size="compact"
         position="bottom-right"
-        title="Chat/Speak"
+        title="Assistant"
         start-button-text="Start"
         end-button-text="End Call"
         chat-first-message="Hey, How can I help you today?"
