--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       padding: 0;
       box-sizing: border-box;
     }
+    html, body {
+        max-width: 100vw;
+        overflow-x: hidden;
+        }
     
     body {
       font-family: 'Poppins', sans-serif;
@@ -1074,6 +1078,12 @@
       .timeline-content {
         padding: 1.8rem;
       }
+      .container {
+        padding: 0 5px;
+        width: 100%;
+        min-width: 0;
+        box-sizing: border-box;
+    }
     }
   </style>
 </head>
@@ -1510,7 +1520,31 @@
   <div class="back-to-top" id="backToTop">
     <i class="fas fa-arrow-up"></i>
   </div>
-
+ 
+      <vapi-widget
+        public-key="bf90c87b-187c-4853-a6cc-88c4626a5cb8"
+        assistant-id="c4c694e3-66fc-4e91-b1f3-a919d62ceeab"
+        mode="hybrid"
+        theme="dark"
+        base-bg-color="#4a4e69"
+        accent-color="#ef233c"
+        cta-button-color="#000000"
+        cta-button-text-color="#ffffff"
+        border-radius="small"
+        size="compact"
+        position="bottom-right"
+        title="Assistant"
+        start-button-text="Start"
+        end-button-text="End Call"
+        chat-first-message="Hey, How can I help you today?"
+        chat-placeholder="Type your message..."
+        voice-show-transcript="true"
+        consent-required="true"
+        consent-title="Terms and conditions"
+        consent-content="By clicking 'Agree,' and each time I interact with this AI agent, I consent to the recording, storage, and sharing of my communications with third-party service providers, and as otherwise described in our Terms of Service."
+        consent-storage-key="vapi_widget_consent"
+      ></vapi-widget>
+  
 
   <script>
     // Smooth scrolling for navigation links
