--- a/index.html
+++ b/index.html
@@ -1084,6 +1084,10 @@
         min-width: 0;
         box-sizing: border-box;
     }
+    .contact-info,
+    .contact-form {
+        padding: 1rem;
+    }
     }
   </style>
 </head>
